--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ nav:
  - name: "Publication"
    link: "publication"
  - name: "Resume"
-   link: "CV_Nuowen_Kan.pdf"
+   link: "NuowenKan-EN-resume.pdf"
 #  - name: "Blog"
 #    link: "http://blog.nuowen.pro"
 
